# orizzonte

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  temp.cpp
cmake/: Findconcurrentqueue.cmake
include/: orizzonte.hpp
include/orizzonte/: aliases.hpp  dependencies.hpp  meta.hpp  node.hpp  temp.hpp  thread_pool.hpp  types.hpp  utilities.hpp  utility.hpp  utlities.hpp
include/orizzonte/aliases/: assert.hpp  attributes.hpp  vrmc.hpp
include/orizzonte/dependencies/: threading.hpp
include/orizzonte/meta/: constant.hpp  enumerate_args.hpp  sequence.hpp  type_wrapper.hpp
include/orizzonte/node/: all.hpp  any.hpp  helper.hpp  leaf.hpp  seq.hpp  then.inl
include/orizzonte/thread_pool/: third_party.hpp
include/orizzonte/types/: tuple.hpp  variant.hpp
include/orizzonte/utilities/: fwd_capture.hpp  nothing.hpp  tuple.hpp
include/orizzonte/utility/: aligned_storage.hpp  bool_latch.hpp  cache_aligned_tuple.hpp  fwd.hpp  movable_atomic.hpp  noop.hpp  nothing.hpp  sync_execute.hpp
src/: bfuture_bench.cpp  cr  crfast  ctt_bench.cpp  new2.cpp  new2.s  new3.cpp  new_design.cpp  out.asm  out0.txt  out1.txt  temp.cpp  temp.hpp  verify  verify_one
test/: CMakeLists.txt  should_compile.cpp  temp.cpp  test_utils.hpp  utils.hpp  utils_ops.hpp
test/orizzonte/graph/: basic.cpp  then.cpp  weird_cleanup.cpp
test/orizzonte/meta/: constant.cpp  enumerate_args.cpp  sequence.cpp
test/orizzonte/utility/: bool_latch.cpp  cache_aligned_tuple.cpp  nothing.cpp
test/utilities/fwd_capture/: apply_fwd_capture.cpp  fwd.cpp  fwd_capture.cpp  fwd_capture_as_tuple.cpp  fwd_capture_as_tuple_variadic..cpp  fwd_capture_as_tuple_variadic.cpp  fwd_capture_pack.cpp  fwd_capture_pack_variadic.cpp  fwd_capture_types.cpp  fwd_capture_wrapper_fwd_get.cpp  fwd_capture_wrapper_get.cpp  fwd_copy_capture.cpp  fwd_copy_capture_pack.cpp  fwd_copy_capture_pack_variadic.cpp  stateful_lambdas.cpp
test/utilities/nothing/: apply_ignore_nothing.cpp  bind_return_type_to_nothing.cpp  call_ignoring_nothing.cpp  for_tuple_ignore_nothing.cpp  is_nothing.cpp  old_tests.cpp  void_to_nothing.cpp  with_void_to_nothing.cpp
